Show results for search

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BarSquare :: Back End Basejump FreeCodeCamp</title>
-    <script src="/public/js/angular.min.js"></script><!-- load angular -->
+    <script src="/public/js/angular.js"></script><!-- load angular -->
     <script src="/public/js/angular-route.min.js"></script><!-- load ng-route -->
     <script src="/controllers/barSquare.client.js"></script><!-- main controller -->
     <link href="/public/css/spectre.min.css" rel="stylesheet"/><!-- spectre framework -->
